# c2puml

./: .coveragerc  .cursorignore  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  .tmp_map_tests.py  =7.0.0  CLEANUP_SUMMARY.md  COVERAGE_DETAILS.md  COVERAGE_README.md  COVERAGE_TESTING.md  CRYPTO_FILTER_ISSUE_ANALYSIS.md  DEPLOYMENT.md  ENHANCED_ERROR_HANDLING_SUMMARY.md  FINAL_SUMMARY.md  FORMATTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INCLUDE_FILTERING_BUGS_AND_FIXES.md  INCLUDE_FILTERS_README.md  INCLUDE_PROCESSING_TEST_SUMMARY.md  LINTING.md  MODEL_FILTERING_GUIDE.md  MULTI_CONFIG_GUIDE.md  PARSER_TOKENIZER_ANALYSIS.md  PLANTUML_CONFIG.md  PUML2PNG_DUPLICATE_FIX.md  QUALITY_IMPROVEMENTS.md  README.md  README_STANDALONE.md  README_VSCODE.md  REFACTORING_SUMMARY.md  RENAMED_AND_ENHANCED_IMPLEMENTATION.md  SIMPLIFICATION_SUMMARY.md  SIMPLIFIED_PATH_HANDLING.md  STANDALONE_SOLUTION.md  TESTING.md  TESTING_REFACTOR_SUMMARY.md  TESTING_SUMMARY.md  (+135 more)
.cursor/rules/: 01-project-overview.mdc  02-style-formatting.mdc  03-documentation.mdc  04-type-hints.mdc  05-testing.mdc  06-project-structure.mdc  07-code-quality.msc  08-refactoring.mdc  09-final-enforcement.mdc  10-workflow-testing.mdc
.github/workflows/: 00-test.yml  01-test-and-coverage.yml  01-test-and-validate.yml  02-generate-plantuml.yml  02-puml-to-png.yml  03-deploy-website.yml  10-release.yml  11-clean-history.yml  11-pypi.yml  README.md  convert-puml-to-jpeg.yml  deploy-website.yml  format-check.yml  lint-and-format.yml  lint-check.yml  main.yml  puml2png.yml  python-format.yml  quality-checks.yml  quick-deploy.yml  release.yml  test-coverage.yml  test-format.yml  test-simple.yml  test.yml
artifacts/: .gitkeep
artifacts/coverage/: coverage.json  coverage.xml  coverage_report.txt
artifacts/output_example/: application.puml  complex.puml  database.puml  diagram_index.html  geometry.puml  logger.puml  math_utils.puml  model.json  model_transformed.json  network.puml  preprocessed.puml  sample.puml  sample2.puml  transformed.puml  typedef_test.puml
artifacts/test_hide_macros/: application.puml  database.puml  geometry.puml  logger.puml  math_utils.puml  model.json  model_transformed.json  network.puml  sample2.puml  transformed.puml  typedef_test.puml
artifacts/test_reports/: test-summary.txt  test_summary.html
c_to_plantuml/: __init__.py  analyzer.py  config.py  exceptions.py  generator.py  main.py  main_optimized.py  models.py  parser.py  parser_tokenizer.py  preprocessor.py  project_analyzer.py  pycparser_driver.py  pyproject.toml  test_config.json  transformer.py  utils.py  verifier.py
c_to_plantuml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
c_to_plantuml/generators/: __init__.py  model_plantuml_generator.py  plantuml_generator.py
c_to_plantuml/manipulators/: __init__.py  json_manipulator.py  model_filter.py  model_transformer.py
c_to_plantuml/models/: __init__.py  c_structures.py  project_model.py
c_to_plantuml/parsers/: __init__.py  c_parser.py  c_parser_enhanced.py  optimized_c_parser.py
c_to_plantuml/utils/: __init__.py  file_utils.py
cli_output/: CLI_Test_overview.puml  complex_example.puml  sample.puml
config/: complete_pump_config.json  element_filters.json  file_filters.json  general_additions.json  project_config.json  pump_additions.json  transformations.json
docs/: INCLUDE_FILTERING_BUGS_AND_FIXES.md  SIMPLIFIED_INCLUDE_PROCESSING.md  configuration.md  error_handling_guide.md  naming_spec.md  puml_template.md  specification.md  test-coverage-workflow.md  test_notes.md  unified_type_system.md
example/: VALIDATION_SUMMARY.md  assertions.py  config.json  run_example.sh
example/source/: Makefile  complex.c  complex.h  complex_example.h  geometry.c  geometry.h  logger.c  logger.h  math_utils.c  math_utils.h  preprocessed.c  preprocessed.h  sample.c  sample.h  test_preprocessed  transformed.h  typedef_test.c  typedef_test.h
example_project/src/: main.c
examples/: SUMMARY.md  run_examples.py
examples/basic_project/: README.md
examples/large_codebase/: README.md
examples/typedef_example/: README.md
hooks/: pre-commit
output/: complex.puml  complex_example.puml  config.puml  diagram_index.html  geometry.puml  logger.puml  main.puml  math_utils.puml  model.json  model_transformed.json  preprocessed.puml  sample.puml  sample2.puml  transformed.puml  typedef_test.puml
packager/: main.py  packager.py
scripts/: .gitignore  align_config_project_name.py  check_tests_mapping.py  cleanup_config_json_blocks.py  cleanup_source_files_blocks.py  convert_yaml_multiline.py  debug.py  ensure_config_docs.py  format.py  format_lint.bat  generate_combined_coverage.py  generate_test_summary_html.py  git_manage.bat  git_reset_pull.bat  install_dependencies.bat  lint.py  lint_and_format.py  picgen.bat  picgen.sh  reformat_tests_yaml_newlines.py  reformat_tests_yaml_newlines_plain.py  reformat_yaml_newlines_stateful.py  run_all.bat  run_all.sh  run_all_tests.bat  run_all_tests.py  run_all_tests.sh  run_example.bat  run_example.ps1  run_example.sh  run_example_with_coverage.py  run_tests_with_coverage.sh  setup.bat
src/c2puml/: __init__.py  config.py  main.py  models.py
test_plantuml_output/: C_Test_Project_overview.puml  complex_example.puml  sample.puml
tests/: README.md  README_CONFIG_TESTS.md  conftest.py  generate_coverage_report.py  generate_test_summary.py  run_parser_tokenizer_tests.py  run_tests.py  test_config.json  test_config.py  test_config_cli.py  test_config_integration.py  test_config_manipulations.py  test_enhanced_parser.py  test_generator.py  test_helper.py  test_integration.py  test_integration_examples.py  test_optimized_parser.py  test_parser.py  test_project_analyzer.py  test_use_cases.py  test_utils.py  todo.md  utils.py
tests/example/: README_REFACTORING.md  REFACTORING_SUMMARY.md  config.json  run_comprehensive_tests.py  test-example.py  test_901_basic_example.py  test_901_basic_example.yml  test_basic_example.py  test_basic_example.yml
tmp107/: complex_struct.c
tmp107b/: anonymous_fields.c
(+699 files in other folders)
