[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | c_to_plantuml\.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["c_to_plantuml"]
skip_glob = [
    "build/*",
    "dist/*",
    "*.egg-info/*",
    ".venv/*",
    "venv/*",
    ".tox/*",
    ".mypy_cache/*"
]